<resources>
    <string name="app_name">IM</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="new_user">新用户</string>
    <string name="regist">注册</string>

    <string name="conversation">消息</string>
    <string name="contact">联系人</string>
    <string name="plugin">动态</string>
    <string name="logout">退出</string>


</resources>
